--- a/composer.json
+++ b/composer.json
@@ -30,8 +30,9 @@
         "ext-json": "*",
         "mockery/mockery": "^1.4",
         "orchestra/testbench": "^7.0|^8.0",
-        "spatie/laravel-ray": "^1.28",
-        "pestphp/pest": "^1.20"
+        "pestphp/pest": "^1.20",
+        "spatie/invade": "^2.0",
+        "spatie/laravel-ray": "^1.28"
     },
     "autoload": {
         "psr-4": {
