--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,6 +8,7 @@
   <php>
     <env name="DB_CONNECTION" value="mysql"/>
     <env name="DB_USERNAME" value="root"/>
+    <env name="DB_PASSWORD" value="secret"/>
     <env name="DB_DATABASE" value="laravel_query_builder"/>
     <env name="DB_HOST" value="127.0.0.1"/>
     <env name="DB_PORT" value="3306"/>
