init phpstan and larastan

--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     "require-dev": {
         "ext-json": "*",
         "mockery/mockery": "^1.4",
+        "nunomaduro/larastan": "^2.0",
         "orchestra/testbench": "^7.0|^8.0",
         "pestphp/pest": "^1.20",
         "phpunit/phpunit": "^9.6.11",
@@ -48,7 +49,9 @@
     },
     "scripts": {
         "test": "vendor/bin/pest",
-        "test-coverage": "phpunit --coverage-html coverage"
+        "test-coverage": "phpunit --coverage-html coverage",
+        "analyse": "vendor/bin/phpstan analyse --ansi --memory-limit=4G",
+        "baseline": "vendor/bin/phpstan analyse --generate-baseline --memory-limit=4G"
     },
     "config": {
         "sort-packages": true,
