--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,6 +1,6 @@
 includes:
     - ./vendor/nunomaduro/larastan/extension.neon
-#   - phpstan-baseline.neon
+    - phpstan-baseline.neon
 
 parameters:
 
