--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "illuminate/database": "^9.0|^10.0",
         "illuminate/http": "^9.0|^10.0",
         "illuminate/support": "^9.0|^10.0",
-        "spatie/laravel-package-tools": "^1.11"
+        "spatie/laravel-package-tools": "^1.11",
+        "doctrine/dbal": "^3.5"
     },
     "require-dev": {
         "ext-json": "*",
