[v6] Add additional types & Phpstan (#910)
* init phpstan and larastan

* Fix: Unsafe access to private property ... through static::

* fixes and baseline

* add phpstan action

* init rector

* apply code changes by rector

* undo Filter contract changes

* fixed a bunch of phpstan issues

* Fix styling

* fix typo

---------

Co-authored-by: Nielsvanpach <Nielsvanpach@users.noreply.github.com>
Co-authored-by: Alex Vanderbist <alex.vanderbist@gmail.com>

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -25,6 +25,7 @@ jobs:
                       testbench: 9.*
                       carbon: ^2.63
                     - laravel: 10.*
+                      php: 8.0
                       testbench: 8.*
 
         name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
@@ -52,8 +53,6 @@ jobs:
                     --health-retries 5
 
         steps:
-
-
             - name: Checkout code
               uses: actions/checkout@v4
 
