--- a/composer.json
+++ b/composer.json
@@ -31,11 +31,9 @@
         "mockery/mockery": "^1.4",
         "nunomaduro/larastan": "^2.0",
         "orchestra/testbench": "^7.0|^8.0",
-        "phpunit/phpunit": "^9.6.11",
-        "rector/rector": "^0.18.10",
+        "phpunit/phpunit": "^10.0",
         "pestphp/pest": "^2.0",
-        "spatie/invade": "^2.0",
-        "spatie/laravel-ray": "^1.28"
+        "spatie/invade": "^2.0"
     },
     "autoload": {
         "psr-4": {
