Fix test workflow

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -24,6 +24,8 @@ jobs:
                     - laravel: 11.*
                       testbench: 9.*
                       carbon: ^2.63
+                    - laravel: 10.*
+                      testbench: 8.*
 
         name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
