--- a/composer.json
+++ b/composer.json
@@ -21,18 +21,18 @@
     ],
     "require": {
         "php": "^8.2",
-        "illuminate/database": "^10.0|^11.0",
-        "illuminate/http": "^10.0|^11.0",
-        "illuminate/support": "^10.0|^11.0",
+        "illuminate/database": "^10.0|^11.0|^12.0",
+        "illuminate/http": "^10.0|^11.0|^12.0",
+        "illuminate/support": "^10.0|^11.0|^12.0",
         "spatie/laravel-package-tools": "^1.11"
     },
     "require-dev": {
         "ext-json": "*",
         "larastan/larastan": "^2.9",
         "mockery/mockery": "^1.4",
-        "orchestra/testbench": "^7.0|^8.0",
-        "pestphp/pest": "^2.0",
-        "phpunit/phpunit": "^10.0",
+        "orchestra/testbench": "^7.0|^8.0|^10.0",
+        "pestphp/pest": "^2.0|^3.7",
+        "phpunit/phpunit": "^10.0|^11.5.3",
         "spatie/invade": "^2.0"
     },
     "autoload": {
