--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest]
-        php: [8.3, 8.2]
+        php: [8.4, 8.3, 8.2]
         laravel: ['10.*', '11.*', '12.*']
         stability: [prefer-stable]
         include:
