--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,13 +1,7 @@
 name: run-tests
 
 on:
-  push:
-    paths:
-      - **.php
-      - .github/workflows/run-tests.yml
-      - phpunit.xml.dist
-      - composer.json
-      - composer.lock
+  push
 
 jobs:
   test:
