add type assertion test for query builder for

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -8,6 +8,7 @@ parameters:
         - src/
         - config/
         - database/
+        - types/
 
     # Level 9 is the highest level
     level: 5
