Test against php 8.5
* Test against php 8.5

* Allow pest v4

* Allow phpunit v12

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest]
-        php: [8.4, 8.3, 8.2]
+        php: [8.5, 8.4, 8.3, 8.2]
         laravel: ['10.*', '11.*', '12.*']
         stability: [prefer-stable]
         include:
@@ -23,6 +23,9 @@ jobs:
             testbench: 8.*
           - laravel: 12.*
             testbench: 10.*
+        exclude:
+          - laravel: 10.*
+            php: 8.5
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
